scans/20171211/dollar.txt
Required ruby-2.1.5 is not installed.
To install do: 'rvm install "ruby-2.1.5"'
[33mDon't run Bundler as root. Bundler can ask for sudo if it is needed, and
installing your bundle as root will break this application for all non-root
users on this machine.[0m
Fetching gem metadata from https://rubygems.org/............
[32mFetching json 1.8.3[0m
[32mInstalling json 1.8.3 with native extensions[0m
[31mGem::Ext::BuildError: ERROR: Failed to build gem native extension.
[0m
current directory:
/usr/local/rvm/gems/ruby-2.4.1/gems/json-1.8.3/ext/json/ext/generator
/usr/local/rvm/rubies/ruby-2.4.1/bin/ruby -r ./siteconf20171211-142-1drphur.rb
extconf.rb
creating Makefile

current directory:
/usr/local/rvm/gems/ruby-2.4.1/gems/json-1.8.3/ext/json/ext/generator
make "DESTDIR=" clean

current directory:
/usr/local/rvm/gems/ruby-2.4.1/gems/json-1.8.3/ext/json/ext/generator
make "DESTDIR="
compiling generator.c
generator.c: In function ‘generate_json’:
generator.c:861:25: error: ‘rb_cFixnum’ undeclared (first use in this function)
     } else if (klass == rb_cFixnum) {
                         ^
generator.c:861:25: note: each undeclared identifier is reported only once for
each function it appears in
generator.c:863:25: error: ‘rb_cBignum’ undeclared (first use in this function)
     } else if (klass == rb_cBignum) {
                         ^
generator.c: At top level:
cc1: warning: unrecognized command line option "-Wno-self-assign" [enabled by
default]
cc1: warning: unrecognized command line option "-Wno-constant-logical-operand"
[enabled by default]
cc1: warning: unrecognized command line option "-Wno-parentheses-equality"
[enabled by default]
cc1: warning: unrecognized command line option "-Wno-tautological-compare"
[enabled by default]
make: *** [generator.o] Error 1

make failed, exit code 2

Gem files will remain installed in
/usr/local/rvm/gems/ruby-2.4.1/gems/json-1.8.3 for inspection.
Results logged to
/usr/local/rvm/gems/ruby-2.4.1/extensions/x86_64-linux/2.4.0/json-1.8.3/gem_make.out

[0m[31mAn error occurred while installing json (1.8.3), and Bundler cannot
continue.
Make sure that `gem install json -v '1.8.3'` succeeds before bundling.[0m

In Gemfile:
  aws-sdk was resolved to 1.66.0, which depends on
    aws-sdk-v1 was resolved to 1.66.0, which depends on
      json[0m
